Add : Add the var.

--- a/04.md
+++ b/04.md
@@ -1,7 +1,7 @@
 # 04-01
 
 ```javascript
-10 + 20
+10 + 20;
 ```
 
 # 04-02
@@ -16,7 +16,7 @@ var user = { id: 1, name: 'Lee' };
 
 var users = [
   { id: 1, name: 'Lee' },
-  { id: 2, name: 'Kim' }
+  { id: 2, name: 'Kim' },
 ];
 ```
 
@@ -43,7 +43,7 @@ var score; // 변수 선언문
 # 04-06
 
 ```javascript
-var score;  // 변수 선언
+var score; // 변수 선언
 score = 80; // 값의 할당
 ```
 
@@ -58,10 +58,14 @@ var score = 80; // 변수 선언과 값의 할당
 ```javascript
 console.log(score); // undefined
 
-var score;  // ① 변수 선언
+var score; // ① 변수 선언
+var grade;
+
 score = 80; // ② 값의 할당
+grade = 70;
 
 console.log(score); // 80
+consoel.log(grade);
 ```
 
 # 04-09
@@ -69,7 +73,7 @@ console.log(score); // 80
 ```javascript
 console.log(score); // undefined
 
-var score = 80;     // 변수 선언과 값의 할당
+var score = 80; // 변수 선언과 값의 할당
 
 console.log(score); // 80
 ```
@@ -80,7 +84,7 @@ console.log(score); // 80
 console.log(score); // undefined
 
 score = 80; // 값의 할당
-var score;  // 변수 선언
+var score; // 변수 선언
 
 console.log(score); // ??
 ```
@@ -89,7 +93,7 @@ console.log(score); // ??
 
 ```javascript
 var score = 80; // 변수 선언과 값의 할당
-score = 90;     // 값의 재할당
+score = 90; // 값의 재할당
 ```
 
 # 04-12
@@ -123,7 +127,7 @@ var FIRSTNAME;
 # 04-16
 
 ```javascript
-var x = 3;       // NG. x 변수가 의미하는 바를 알 수 없다.
+var x = 3; // NG. x 변수가 의미하는 바를 알 수 없다.
 var score = 100; // OK. score 변수는 점수를 의미한다.
 ```
 
@@ -131,7 +135,7 @@ var score = 100; // OK. score 변수는 점수를 의미한다.
 
 ```javascript
 // 경과 시간. 단위는 날짜다
-var d;                 // NG
+var d; // NG
 
 var elapsedTimeInDays; // OK
 ```
