--- a/06.md
+++ b/06.md
@@ -2,24 +2,24 @@
 
 ```javascript
 // 모두 숫자 타입이다.
-var integer = 10;    // 정수
-var double = 10.12;  // 실수
-var negative = -20;  // 음의 정수
+var integer = 10; // 정수
+var double = 10.12; // 실수
+var negative = -20; // 음의 정수
 ```
 
 # 06-02
 
 ```javascript
 var binary = 0b01000001; // 2진수
-var octal = 0o101;       // 8진수
-var hex = 0x41;          // 16진수
+var octal = 0o101; // 8진수
+var hex = 0x41; // 16진수
 
 // 표기법만 다를 뿐 모두 같은 값이다.
 console.log(binary); // 65
-console.log(octal);  // 65
-console.log(hex);    // 65
+console.log(octal); // 65
+console.log(hex); // 65
 console.log(binary === octal); // true
-console.log(octal === hex);    // true
+console.log(octal === hex); // true
 ```
 
 # 06-03
@@ -27,16 +27,16 @@ console.log(octal === hex);    // true
 ```javascript
 // 숫자 타입은 모두 실수로 처리된다.
 console.log(1 === 1.0); // true
-console.log(4 / 2);     // 2
-console.log(3 / 2);     // 1.5
+console.log(4 / 2); // 2
+console.log(3 / 2); // 1.5
 ```
 
 # 06-04
 
 ```javascript
 // 숫자 타입의 세 가지 특별한 값
-console.log(10 / 0);       // Infinity
-console.log(10 / -0);      // -Infinity
+console.log(10 / 0); // Infinity
+console.log(10 / -0); // -Infinity
 console.log(1 * 'String'); // NaN
 ```
 
@@ -53,7 +53,7 @@ var x = nan; // ReferenceError: nan is not defined
 // 문자열 타입
 var string;
 string = '문자열'; // 작은따옴표
-string = "문자열"; // 큰따옴표
+string = '문자열'; // 큰따옴표
 string = `문자열`; // 백틱 (ES6)
 
 string = '작은따옴표로 감싼 문자열 내의 "큰따옴표"는 문자열로 인식된다.';
@@ -77,8 +77,8 @@ console.log(template); // Template literal
 # 06-09
 
 ```javascript
-var str = 'Hello
-world.';
+var str = 'Hello'
+world.';'
 // SyntaxError: Invalid or unexpected token
 ```
 
@@ -174,14 +174,14 @@ foo = null;
 ```html
 <!DOCTYPE html>
 <html>
-<body>
-  <script>
-    var element = document.querySelector('.myClass');
+  <body>
+    <script>
+      var element = document.querySelector('.myClass');
 
-    // HTML 문서에 myClass 클래스를 갖는 요소가 없다면 null을 반환한다.
-    console.log(element); // null
-  </script>
-</body>
+      // HTML 문서에 myClass 클래스를 갖는 요소가 없다면 null을 반환한다.
+      console.log(element); // null
+    </script>
+  </body>
 </html>
 ```
 
@@ -220,29 +220,29 @@ int num;
 
 ```javascript
 var foo;
-console.log(typeof foo);  // undefined
+console.log(typeof foo); // undefined
 
 foo = 3;
-console.log(typeof foo);  // number
+console.log(typeof foo); // number
 
 foo = 'Hello';
-console.log(typeof foo);  // string
+console.log(typeof foo); // string
 
 foo = true;
-console.log(typeof foo);  // boolean
+console.log(typeof foo); // boolean
 
 foo = null;
-console.log(typeof foo);  // object
+console.log(typeof foo); // object
 
 foo = Symbol(); // 심벌
-console.log(typeof foo);  // symbol
+console.log(typeof foo); // symbol
 
 foo = {}; // 객체
-console.log(typeof foo);  // object
+console.log(typeof foo); // object
 
 foo = []; // 배열
-console.log(typeof foo);  // object
+console.log(typeof foo); // object
 
 foo = function () {}; // 함수
-console.log(typeof foo);  // function
+console.log(typeof foo); // function
 ```
